<resources>
    <string name="app_name">YouCook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">UserEmail</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_intro">Welcome to YouCook!</string>
    <string name="menu_home">Home</string>
    <string name="nav_recipe">Recipe Display</string>
    <string name="menu_create">Create</string>
    <string name="menu_recipes">All Recipes</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_header">This is the description</string>
    <string name="recipeimage">RecipeImage</string>
    <string name="pick_your_tags_swipe_right_for_more">Pick your tags! (Swipe right for more)</string>
    <string name="minutes">(minutes)</string>
    <string name="finalize">Finalize</string>
    <string name="done_time">Done Time</string>
    <string name="cook_time">Cook Time</string>
    <string name="prep_time">Prep Time</string>
    <string name="recipe_instructions_go_here">Recipe instructions go here</string>
    <string name="recipe_long_description">Recipe Long Description</string>
    <string name="quick_description_here">Quick description here</string>
    <string name="recipe_quick_description">Recipe Quick Description</string>
    <string name="click_to_insert_recipe_image">Click to insert recipe image</string>
    <string name="recipe_title_here">Recipe title here</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="author">Author</string>
    <string name="work_logo">Work logo</string>
    <string name="user_image">User image</string>
    <string name="recipe_image_to_use">Recipe image to be input</string>
</resources>