<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.youcook.ui.home.HomeFragment"
        android:label="@string/menu_intro"
        tools:layout="@layout/fragment_home" >
    </fragment>
    <fragment
        android:id="@+id/nav_recipes"
        android:name="com.example.youcook.ui.recipes.RecipesFragment"
        android:label="@string/menu_recipes"
        tools:layout="@layout/fragment_recipes" >
        <action
            android:id="@+id/action_nav_to_selected_recipe"
            app:destination="@id/nav_selected_recipe"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_create"
        android:name="com.example.youcook.ui.create.CreateFragment"
        android:label="@string/menu_create"
        tools:layout="@layout/fragment_create" >
        <action
            android:id="@+id/action_nav_create_to_nav_selected_recipe"
            app:destination="@id/nav_selected_recipe"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/nav_selected_recipe"
        android:name="com.example.youcook.ui.recipes.SelectedRecipeFragment"
        android:label="@string/nav_recipe"
        tools:layout="@layout/fragment_selected_recipe"/>
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.youcook.ui.recipes.RecipesFavorites"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_nav_favorites_to_nav_selected_recipe"
            app:destination="@id/nav_selected_recipe"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>